# aplquat

./: README.md  configure.ac  qplot.apl
src/: Makefile.am  Quat.cc  Quat.hh  Quat.tc  aplquat.cc  kwds.m4  testquat.apl
